--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@antv/g2": "^5.3.0",
+    "@vicons/antd": "^0.13.0",
+    "@vicons/ionicons5": "^0.13.0",
+    "axios": "^1.8.4",
+    "echarts": "^5.6.0",
+    "glob": "7.2.3",
+    "inflight": "1.0.6",
+    "naive-ui": "^2.41.0",
+    "pinia": "^3.0.2",
+    "socket.io-client": "^4.8.1",
+    "vue": "^3.5.13",
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
