--- a/.gitignore
+++ b/.gitignore
@@ -6,19 +6,35 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+package.json
 node_modules
+.DS_Store
 dist
 dist-ssr
+coverage
 *.local
-
+/cypress/videos/
+/cypress/screenshots/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/launch.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+package-lock.json
+yarn.lock
+.VSCodeCounter
+env.config.ts
+settings.json
+vite.config.ts.timestamp-*-*.mjs
+.env
+.tsbuildinfo
+.eslintcache
+.env.development
+pnpm-lock.yaml
+src/typings/components.d.ts
