--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
   "name": "mitras-vue",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "npm run typecheck &&  cross-env VITE_SERVICE_ENV=prod vite build",
+    "build:4096": "npm run typecheck && cross-env NODE_OPTIONS=--max-old-space-size=4096 VITE_SERVICE_ENV=prod vite build",
+    "build:test": "npm run typecheck && cross-env VITE_SERVICE_ENV=test vite build",
+    "build:vercel": "cross-env VITE_HASH_ROUTE=Y VITE_VERCEL=Y vite build",
+    "cleanup": "sa cleanup",
+    "commit": "sa git-commit",
+    "dev": "cross-env VITE_SERVICE_ENV=dev vite",
+    "dev:prod": "cross-env VITE_SERVICE_ENV=prod vite",
+    "dev:test": "cross-env VITE_SERVICE_ENV=test vite",
+    "format": "sa prettier-write",
+    "gen-route": "sa gen-route",
+    "lint": "eslint . --fix",
+    "logo": "tsx ./scripts/logo.ts",
+    "prepare": "simple-git-hooks",
+    "preview": "vite preview",
+    "release": "sa release",
+    "start": "cross-env VITE_SERVICE_ENV=dev vite",
+    "tsx": "tsx",
+    "typecheck": "set NODE_OPTIONS='--max-old-space-size=4096' vue-tsc --noEmit --skipLibCheck",
+    "update-pkg": "sa update-pkg"
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@antv/data-set": "0.11.8",
     "@antv/g2": "4.2.10",
     "@better-scroll/core": "2.5.1",
+    "@fawmi/vue-google-maps": "^0.9.79",
     "@iconify/vue": "4.1.1",
     "@sa/axios": "workspace:*",
     "@sa/color-palette": "workspace:*",
