--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ env.config.ts
 settings.json
 vite.config.ts.timestamp-*-*.mjs
 .env
+.env.production
 .tsbuildinfo
 .eslintcache
 .env.development
