--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,14 +4,10 @@
     "tsBuildInfoFile": "node_modules/.tmp/tsconfig.app.tsbuildinfo",
     /* Linting */
     "strict": true,
+    "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
