--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
-  "name": "mitras-vue",
+  "name": "thingsly-vue",
   "type": "module",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Thingsly Frontend",
   "private": true,
+  "homepage": "https://github.com/Thingsly/frontend",
+  "repository": {
+    "url": "https://github.com/Thingsly/frontend.git"
+  },
+  "keywords": [
+    "Thingsly",
+    "Soybean JS",
+    "Vue",
+    "Vue3",
+    "Vite",
+    "Vue Router",
+    "Pinia",
+    "Naive UI"
+  ],
   "scripts": {
     "build": "npm run typecheck &&  cross-env VITE_SERVICE_ENV=prod vite build",
     "build:4096": "npm run typecheck && cross-env NODE_OPTIONS=--max-old-space-size=4096 VITE_SERVICE_ENV=prod vite build",
