feat(components): add OpenStreetMap component and integrate with existing map functionality; update language strings for consistency

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@sa/materials": "workspace:*",
     "@sa/utils": "workspace:*",
     "@soybeanjs/vue-materials": "0.2.0",
+    "@types/leaflet": "^1.9.17",
     "@vexip-ui/hooks": "^2.4.0",
     "@vexip-ui/utils": "^2.13.0",
     "@vue/runtime-dom": "^3.4.21",
@@ -67,6 +68,7 @@
     "form-data": "4.0.0",
     "interactjs": "^1.10.26",
     "jsencrypt": "^3.3.2",
+    "leaflet": "^1.9.4",
     "lodash-es": "4.17.21",
     "moment": "^2.30.1",
     "moving-numbers-vue3": "^1.1.3",
