--- a/nginx.conf
+++ b/nginx.conf
@@ -12,26 +12,47 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
     access_log  /var/log/nginx/access.log  main;
+
     sendfile            on;
     tcp_nopush          on;
     tcp_nodelay         on;
     keepalive_timeout   65;
     types_hash_max_size 2048;
     client_max_body_size 1024M;
+
     gzip on;
     gzip_min_length 1k;
     gzip_comp_level 4;
     gzip_types text/plain application/javascript application/x-javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png;
     gzip_vary on;
     gzip_disable "MSIE [1-6]\.";
+
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
 
+    # HTTP to HTTPS redirect (optional but recommended)
     server {
+        listen 80;
+        server_name dangky.app www.dangky.app;
+        return 301 https://$host$request_uri;
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name dangky.app;
+
+        ssl_certificate     /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        root /usr/share/nginx/html;
         port_in_redirect off;
-        listen       8080;
-        server_name  _;
-        root         /usr/share/nginx/html;
 
         location /api {
             proxy_pass  http://backend:9999;
@@ -49,7 +70,7 @@ http {
             proxy_set_header Connection "upgrade";
             proxy_set_header X-real-ip $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }		
+        }
 
         location ^~ /visual {
             alias /usr/share/nginx/visual-editor;
@@ -58,16 +79,14 @@ http {
         }
 
         location / {
-            index       index.html index.htm;
+            index index.html index.htm;
             try_files $uri $uri/ /index.html;
         }
 
         error_page 404 /404.html;
-            location = /40x.html {
-        }
+            location = /40x.html { }
 
         error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
-        }
+            location = /50x.html { }
     }
 }
