--- a/nginx.conf
+++ b/nginx.conf
@@ -39,7 +39,8 @@ http {
 
     # HTTPS server
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name dangky.app;
 
         ssl_certificate     /etc/nginx/ssl/fullchain.pem;
