--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
@@ -22,7 +24,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20.11
+          node-version: 22.14.0
 
       - name: Cache pnpm modules
         uses: actions/cache@v3
@@ -34,7 +36,7 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-          npm install -g pnpm@8.15.5
+          npm install -g pnpm@10.11.0
           pnpm i
           pnpm build:4096
 
@@ -45,12 +47,12 @@ jobs:
         id: delete_release
         run: |
           tag=${{ github.event.inputs.tag || 'latest' }}
-          release_id=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          release_id=$(curl -s -H "Authorization: token ${{ secrets.TOKEN_RELEASE }}" \
             "https://api.github.com/repos/${{ github.repository }}/releases/tags/$tag" | \
             jq -r '.id')
           if [ "$release_id" != "null" ]; then
             echo "Deleting existing release with ID $release_id"
-            curl -s -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            curl -s -X DELETE -H "Authorization: token ${{ secrets.TOKEN_RELEASE }}" \
               "https://api.github.com/repos/${{ github.repository }}/releases/$release_id"
           else
             echo "No existing release found for tag ${{ github.event.inputs.tag }}"
@@ -60,7 +62,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN_RELEASE }}
         with:
           tag_name: ${{ github.event.inputs.tag  || 'latest' }}
           release_name: Release ${{ github.event.inputs.tag  || 'latest' }}
@@ -72,7 +74,7 @@ jobs:
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN_RELEASE }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist.tar.gz
