--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,5 @@
-FROM nginx:alpine
+ARG TARGETPLATFORM=linux/amd64
+FROM --platform=$TARGETPLATFORM nginx:alpine
 
 # Remove default nginx configuration
 RUN rm -rf /etc/nginx/conf.d/default.conf
