--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -32,6 +32,10 @@ on:
 jobs:
   build-docker-image:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
     strategy:
       matrix:
         node-version: [22.14.0]
