--- a/nginx.conf
+++ b/nginx.conf
@@ -43,8 +43,8 @@ http {
         http2 on;
         server_name dangky.app;
 
-        ssl_certificate     /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        ssl_certificate     /etc/nginx/ssl/live/dangky.app/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/live/dangky.app/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
